--- a/templates/sheets/runner.hbs
+++ b/templates/sheets/runner.hbs
@@ -437,6 +437,10 @@
     </div>
   </section>
   <section class="harm">
+    <div class="SR">
+      <input name="system.angle.SR" type="checkbox" id="{{actor._id}}_SR" {{#if system.angle.SR }}checked{{/if}}/>
+      <label for="{{actor._id}}_SR">SPECIAL RESISTANCE</label>
+    </div>
     <ol start="1">
         <li data-type="efect"`>
             <input type="text" value="{{system.HARM.light.name}}" name="system.HARM.light.name" />
