--- a/mian.css
+++ b/mian.css
@@ -462,7 +462,7 @@ section.gear p {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin: 20px;
+  margin: 20px 0;
   width: 400px;
 }
 .stress::before {
@@ -480,11 +480,14 @@ section.gear p {
   display: none;
 }
 .stress label {
-  display: inline-block;
+  display: flex;
   width: 26px;
   height: 26px;
   border: 1px solid rgb(var(--black));
   transform: rotate(45deg);
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 .stress input:checked + label {
   width: 26px;
@@ -492,10 +495,13 @@ section.gear p {
   background: rgb(var(--blue));
 }
 .stress input:checked + label::before {
-  content: "⚡";
+  font-family: "Font Awesome 6 Pro";
+  content: "\f0e7";
   transform: rotate(-45deg);
   display: inline-block;
   font-size: large;
+  color: rgb(var(--yellow));
+  font-weight: 900;
 }
 .stress > label:last-of-type {
   border: 4px solid rgb(var(--yellow));
@@ -546,7 +552,7 @@ form.runnerCard {
 }
 
 .harm input[type="text"] {
-  width: 225px;
+  width: 204px;
 }
 
 input[type="text"] {
@@ -671,7 +677,6 @@ li.chat-message.message.flexcol:has(.runner) {
   position: relative;
   background: transparent;
   color: rgb(var(--white));
-  overflow: hidden;
   padding: 0;
   border-width: 0;
 }
@@ -1226,3 +1231,16 @@ form.hunterCard header textarea {
 .itemCard .art img {
   width: 100%;
 }
+
+form.runnerCard header {
+  max-width: 440px;
+}
+
+form.runnerCard .approach { grid-area: 1 / 2 / 2 / 3; }
+form.runnerCard header { grid-area: 1 / 1 / 3 / 2; }
+form.runnerCard .skills { grid-area: 2 / 2 / 3 / 3; }
+form.runnerCard .stress { grid-area: 3 / 1 / 4 / 2; }
+form.runnerCard .augmentations { grid-area: 4 / 1 / 5 / 2; }
+form.runnerCard .harm { grid-area: 5 / 1 / 6 / 2; }
+form.runnerCard .gear { grid-area: 3 / 2 / 6 / 3; }
+
