--- a/templates/sheets/runner.hbs
+++ b/templates/sheets/runner.hbs
@@ -233,7 +233,7 @@
           <span class="{{#if system.skills.STREETWISE.EXPERTISES.NAVIGATION}}active{{/if}}">NAVIGATION</span>
         </p></td>
       </tr>
-      {{#if system.wiedModule}}
+      {{#if system.wierd}}
       <tr data-value="{{system.skills.ATTUNE.dice}}"  class="{{#if (isEqual system.roll.skill "ATTUNE")}}select{{/if}}">
         <td><h3>ATTUNE</h3></td>
         <td><div class="dots">
